force-app/main/default/objects/Enrolment__c/fields/Promotional_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Period_End_Date__c</fullName>
    <label>Promotional Period End Date</label>
    <type>Date</type>
</CustomField>