force-app/main/default/objects/Enrolment__c/fields/Reason_of_Withdraw__c.field-meta.xml
<CustomField>
    <fullName>Reason_of_Withdraw__c</fullName>
    <label>Reason of Withdraw</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loss of Interest</fullName>
            </value>
            <value>
                <fullName>Focus on Other Studies</fullName>
            </value>
            <value>
                <fullName>Logistics Issues</fullName>
            </value>
            <value>
                <fullName>Relocation</fullName>
            </value>
            <value>
                <fullName>Too Expensive</fullName>
            </value>
            <value>
                <fullName>Other - Please Specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>