force-app/main/default/objects/Enrolment__c/fields/Referee_discount_amount__c.field-meta.xml
<CustomField>
    <fullName>Referee_discount_amount__c</fullName>
    <label>Referee discount amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>