force-app/main/default/objects/Enrolment__c/fields/Referral_code_used__c.field-meta.xml
<CustomField>
    <fullName>Referral_code_used__c</fullName>
    <label>Referral code used</label>
    <length>8</length>
    <type>Text</type>
</CustomField>