force-app/main/default/objects/Enrolment__c/fields/Referred_by__c.field-meta.xml
<CustomField>
    <fullName>Referred_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred by</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Enrolments (Referred by)</relationshipLabel>
    <relationshipName>Enrolments6</relationshipName>
    <type>Lookup</type>
</CustomField>