force-app/main/default/objects/Enrolment__c/fields/Referrer_discount_amount__c.field-meta.xml
<CustomField>
    <fullName>Referrer_discount_amount__c</fullName>
    <label>Referrer discount amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>