force-app/main/default/objects/Enrolment__c/fields/Refund_Method__c.field-meta.xml
<CustomField>
    <fullName>Refund_Method__c</fullName>
    <label>Refund Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>GIRo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>