force-app/main/default/objects/Enrolment__c/fields/Releasing_Block_Reason__c.field-meta.xml
<CustomField>
    <fullName>Releasing_Block_Reason__c</fullName>
    <label>Releasing Block Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Not Interested</fullName>
            </value>
            <value>
                <fullName>Customer Not Contactable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>