force-app/main/default/objects/Enrolment__c/fields/Rental_End_date__c.field-meta.xml
<CustomField>
    <fullName>Rental_End_date__c</fullName>
    <description>this field for piano rental for manage customer Rental End date</description>
    <label>Rental End date</label>
    <type>Date</type>
</CustomField>