force-app/main/default/objects/Enrolment__c/fields/Rental_price_per_month__c.field-meta.xml
<CustomField>
    <fullName>Rental_price_per_month__c</fullName>
    <description>this field for piano rental for manage customer Rental price (per month)</description>
    <label>Rental price (per month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>