force-app/main/default/objects/Enrolment__c/fields/Rental_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Rental_Start_date__c</fullName>
    <description>this field for piano rental for manage customer Rental Start date</description>
    <label>Rental Start date</label>
    <type>Date</type>
</CustomField>