force-app/main/default/objects/Enrolment__c/fields/Rental_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Rental_Termination_Date__c</fullName>
    <label>Rental Termination Date</label>
    <type>Date</type>
</CustomField>