force-app/main/default/objects/Enrolment__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>store Resouces id</description>
    <label>Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Enrolments</relationshipLabel>
    <relationshipName>Enrolments</relationshipName>
    <type>Lookup</type>
</CustomField>