force-app/main/default/objects/Enrolment__c/fields/Selling_price__c.field-meta.xml
<CustomField>
    <fullName>Selling_price__c</fullName>
    <description>this field for piano rental for manage customer piano Selling Price</description>
    <label>Selling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>