force-app/main/default/objects/Enrolment__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <description>this field for piano rental for manage customer selected Serial Number</description>
    <label>Serial Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>