force-app/main/default/objects/Enrolment__c/fields/Service_lift__c.field-meta.xml
<CustomField>
    <fullName>Service_lift__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field for piano rental for manage customer building use lift or not</description>
    <label>Service Lift</label>
    <type>Checkbox</type>
</CustomField>