force-app/main/default/objects/Enrolment__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>No-Show</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Transferred</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Pending Enrolment</fullName>
            </value>
            <value>
                <fullName>Piano Viewing Booked</fullName>
            </value>
            <value>
                <fullName>Piano Viewing Completed</fullName>
            </value>
            <value>
                <fullName>Piano Rental Active</fullName>
            </value>
            <value>
                <fullName>Piano Termination In-Progress</fullName>
            </value>
            <value>
                <fullName>Piano Rental Terminated</fullName>
            </value>
            <value>
                <fullName>Piano Sold</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>