force-app/main/default/objects/Enrolment__c/fields/Stair_Charges__c.field-meta.xml
<CustomField>
    <fullName>Stair_Charges__c</fullName>
    <label>Stair Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>