force-app/main/default/objects/Enrolment__c/fields/Standard_Accessories__c.field-meta.xml
<CustomField>
    <fullName>Standard_Accessories__c</fullName>
    <defaultValue>&quot;Bench;Headphone;Heating rod;Maintenance kit (Caster cups, key cloth, cleaning cloth)&quot;</defaultValue>
    <description>this field for piano rental for manage customer selected Standard Accessories</description>
    <label>Standard Accessories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bench</fullName>
            </value>
            <value>
                <fullName>Headphone</fullName>
            </value>
            <value>
                <fullName>Heating rod</fullName>
            </value>
            <value>
                <fullName>Maintenance kit (Caster cups, key cloth, cleaning cloth)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>