force-app/main/default/objects/Enrolment__c/fields/Student_ID_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Student_ID_Legacy__c</fullName>
    <formula>Student__r.Student_ID_Legacy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student ID (Legacy)</label>
    <type>Text</type>
</CustomField>