force-app/main/default/objects/Enrolment__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <formula>Student__r.FirstName +&apos; &apos;+Student__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Name</label>
    <type>Text</type>
</CustomField>