force-app/main/default/objects/Enrolment__c/fields/Teacher__c.field-meta.xml
<CustomField>
    <fullName>Teacher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Teacher</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Enrolments4</relationshipName>
    <type>Lookup</type>
</CustomField>