force-app/main/default/objects/Enrolment__c/fields/Termination_Inspection_Completed__c.field-meta.xml
<CustomField>
    <fullName>Termination_Inspection_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field for piano rental for manage customer Termination Inspection Completed after submit Inspection report</description>
    <label>Termination Inspection Completed</label>
    <type>Checkbox</type>
</CustomField>