force-app/main/default/objects/Enrolment__c/fields/Termination_Reason__c.field-meta.xml
<CustomField>
    <fullName>Termination_Reason__c</fullName>
    <description>this field for piano rental for manage customer Termination reason</description>
    <label>Termination Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not needed anymore</fullName>
            </value>
            <value>
                <fullName>Moving out of SG</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>