force-app/main/default/objects/Enrolment__c/fields/Termination_Reason_others__c.field-meta.xml
<CustomField>
    <fullName>Termination_Reason_others__c</fullName>
    <description>this field for piano rental for manage customer Termination other reason</description>
    <label>Termination Reason (others)</label>
    <type>TextArea</type>
</CustomField>