force-app/main/default/objects/Enrolment__c/fields/Termination_request_date__c.field-meta.xml
<CustomField>
    <fullName>Termination_request_date__c</fullName>
    <description>this field for piano rental for manage customer Termination requested date</description>
    <label>Termination request date</label>
    <type>Date</type>
</CustomField>