force-app/main/default/objects/Enrolment__c/fields/Total_Deposit_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Deposit_Value__c</fullName>
    <label>Total Deposit Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>