force-app/main/default/objects/Enrolment__c/fields/Trial_Completed__c.field-meta.xml
<CustomField>
    <fullName>Trial_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trial Completed</label>
    <type>Checkbox</type>
</CustomField>