force-app/main/default/objects/Enrolment__c/fields/Trial_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Requested_Date__c</fullName>
    <label>Trial Requested Date</label>
    <type>DateTime</type>
</CustomField>