force-app/main/default/objects/Enrolment__c/fields/Trial_Source__c.field-meta.xml
<CustomField>
    <fullName>Trial_Source__c</fullName>
    <description>to store trial source information in enrolment object ,after that in case object</description>
    <label>Trial Source</label>
    <length>200</length>
    <type>Text</type>
</CustomField>