force-app/main/default/objects/Enrolment__c/fields/Trial_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Trial_Start_Time__c</fullName>
    <label>Trial Start Time</label>
    <type>Time</type>
</CustomField>