force-app/main/default/objects/Enrolment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Ad-hoc</fullName>
            </value>
            <value>
                <fullName>Camp</fullName>
            </value>
            <value>
                <fullName>Instrument</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>