force-app/main/default/objects/Enrolment__c/fields/Type_of_Package__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Package__c</fullName>
    <description>From related Package</description>
    <formula>TEXT( Package__r.Type_of_package__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of Package</label>
    <type>Text</type>
</CustomField>