force-app/main/default/objects/Enrolment__c/fields/Unit_and_Level__c.field-meta.xml
<CustomField>
    <fullName>Unit_and_Level__c</fullName>
    <description>this field for piano rental for manage customer unit and level</description>
    <label>Unit and Level</label>
    <length>100</length>
    <type>Text</type>
</CustomField>