force-app/main/default/objects/Enrolment__c/recordTypes/Instrument_Rental.recordType-meta.xml
<RecordType>
    <fullName>Instrument_Rental</fullName>
    <active>true</active>
    <description>this  Record Type for show Instrument Rental fields</description>
    <label>Instrument Rental</label>
</RecordType>