force-app/main/default/objects/Enrolment__c/recordTypes/Lesson.recordType-meta.xml
<RecordType>
    <fullName>Lesson</fullName>
    <active>true</active>
    <label>Lesson</label>
</RecordType>