force-app/main/default/objects/Enrolment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Instrument_Images__c</columns>
    <columns>Parent__c</columns>
    <columns>Student__c</columns>
    <columns>Center__c</columns>
    <columns>Teacher__c</columns>
    <columns>Package__c</columns>
    <columns>Type__c</columns>
    <columns>Stage__c</columns>
    <columns>Trial_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Enrolled</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notEqual</operation>
        <value>TMC Team</value>
    </filters>
    <label>All</label>
</ListView>