force-app/main/default/objects/Enrolment__c/listViews/Today_s_Enrolments.listView-meta.xml
<ListView>
    <fullName>Today_s_Enrolments</fullName>
    <columns>NAME</columns>
    <columns>Instrument_Images__c</columns>
    <columns>Parent__c</columns>
    <columns>Student__c</columns>
    <columns>Center__c</columns>
    <columns>Teacher__c</columns>
    <columns>Package__c</columns>
    <columns>Type__c</columns>
    <columns>Stage__c</columns>
    <columns>Trial_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Enrolments</label>
</ListView>