force-app/main/default/objects/Enrolment__c/listViews/Trial_Requested.listView-meta.xml
<ListView>
    <fullName>Trial_Requested</fullName>
    <columns>NAME</columns>
    <columns>Instrument_Images__c</columns>
    <columns>Parent__c</columns>
    <columns>Student__c</columns>
    <columns>Center__c</columns>
    <columns>Teacher__c</columns>
    <columns>Package__c</columns>
    <columns>Type__c</columns>
    <columns>Stage__c</columns>
    <columns>Trial_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Trial</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Requested,Attended</value>
    </filters>
    <label>Trial Requested</label>
</ListView>